Hill Climbing and EphemerisLoader adapted for both missions. Code still running